# django-oac

./: .coveragerc  .coveralls.yml  .env.minimal  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test-django-oac.yml
django_oac/: __init__.py  admin.py  apps.py  backends.py  checks.py  conf.py  decorators.py  exceptions.py  helpers.py  logger.py  middleware.py  models.py  services.py  stores.py  urls.py  views.py
django_oac/migrations/: 0001_initial.py  0002_user.py  0003_state.py  0004_auto_20200827_0951.py  0005_auto_20200827_1014.py
django_oac/models_providers/: token_provider.py  user_provider.py
django_oac/templates/: error.html
django_oac/templates/django_oac/: 400.html  403.html
project/: settings.py  urls.py
tests/: common.py  conftest.py  helpers.py  settings.py  test_authenticate_view.py  test_callback_view.py  test_django_oac.py  test_logout_view.py  test_oauth_client_backend.py  test_oauth_client_middleware.py  test_profile_view.py  test_token_model.py  test_token_remote_manager.py  test_user_remote_manager.py
tests/integration/: test_authentication_endpoint.py  test_authentication_succeeded.py  test_callback_endpoint.py  test_jwt_payload_store_class.py  test_logout_endpoint.py
tests/unit/: test_authenticate_view.py  test_cache_jwks_service.py  test_callback_view.py  test_decorators.py  test_default_token_provider.py  test_default_user_provider.py  test_django_oac.py  test_json_web_key_store_class.py  test_jwks_class.py  test_jwt_payload_store_class.py  test_logout_view.py  test_oacsettings_class.py  test_oauth_client_backend.py  test_oauth_client_middleware.py  test_oauth_jwks_service.py  test_oauth_request_service.py  test_profile_view.py  test_token_model.py  test_token_remote_manager.py  test_user_class.py  test_user_remote_manager.py
