[tool.poetry]
name = "django-oac"
version = "0.1.0"
description = ""
authors = ["Przemek Kaliś <przemek.kalis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
requests = "^2.24.0"
pendulum = "^2.1.2"
pyjwt = "^1.7.1"
cryptography = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-django = "^3.9.0"
jwcrypto = "^0.7"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
