[tool.poetry]
name = "django-oac"
version = "0.2.0"
description = ""
authors = ["Przemek Kaliś <przemek.kalis@gmail.com>"]

[tool.poetry.dependencies]
cryptography = "^3.2"
django = "^3.1"
django-ipware = "^3.0.1"
jwcrypto = "^0.7"
pendulum = "^2.1.2"
pyjwt = "^1.7.1"
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "<5"
django_sslserver = "^0.22"
isort = "^5.4.2"
pylint-django = "^2.3.0"
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-django = "^3.9.0"
python-coveralls = "^2.9.3"
python-dotenv = "^0.14.0"
responses = "^0.14.0"
toml = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
